@@ -40,7 +40,6 @@ import static org.hisp.dhis.importexport.ImportStrategy.DELETE;
 import static org.hisp.dhis.importexport.ImportStrategy.UPDATE;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -210,7 +209,7 @@ public class ServiceConfig
     @Bean
     public Map<ImportStrategy, List<ValidationCheck>> validatorsByImportStrategy()
     {
-        return ImmutableMap.of(
+        return Map.of(
             CREATE_AND_UPDATE, newArrayList(
                 getValidationCheckByClass( DuplicateIdsCheck.class ),
                 getValidationCheckByClass( ValidationHooksCheck.class ),
@@ -261,9 +260,9 @@ public class ServiceConfig
                 getValidationCheckByClass( DeletionCheck.class ) ) );
     }
 
-    /*
-     * TRACKER EVENT IMPORT VALIDATION
-     */
+    // -------------------------------------------------------------------------
+    // Tracker event import validation
+    // -------------------------------------------------------------------------
 
     @Bean
     public List<Checker> checkersRunOnInsert()
@@ -343,9 +342,9 @@ public class ServiceConfig
             .orElseThrow( () -> new IllegalArgumentException( "Unable to find validator by class: " + clazz ) );
     }
 
-    /*
-     * TRACKER EVENT PRE/POST PROCESSING
-     */
+    // -------------------------------------------------------------------------
+    // Tracker event pre/post processing
+    // -------------------------------------------------------------------------
 
     @Bean
     Map<EventProcessorPhase, EventProcessorExecutor> executorsByPhase()
@@ -368,8 +367,8 @@ public class ServiceConfig
 
     private Map<EventProcessorPhase, List<Processor>> getProcessorsByPhase()
     {
-        return ImmutableMap.<EventProcessorPhase, List<Processor>> builder()
-            .put( INSERT_PRE, newArrayList(
+        return Map.of(
+            INSERT_PRE, newArrayList(
                 getProcessorByClass( ImportOptionsPreProcessor.class ),
                 getProcessorByClass( EventStoredByPreProcessor.class ),
                 getProcessorByClass( SharedEventStatusPreProcessor.class ),
@@ -377,29 +376,28 @@ public class ServiceConfig
                 getProcessorByClass( ProgramStagePreProcessor.class ),
                 getProcessorByClass( EventGeometryPreProcessor.class ),
                 getProcessorByClass( FilteringOutUndeclaredDataElementsProcessor.class ),
-                getProcessorByClass( UserInfoInsertPreProcessor.class ) ) )
-            .put( INSERT_POST, newArrayList(
+                getProcessorByClass( UserInfoInsertPreProcessor.class ) ),
+            INSERT_POST, newArrayList(
                 getProcessorByClass( ProgramNotificationPostProcessor.class ),
                 getProcessorByClass( PublishEventPostProcessor.class ),
                 getProcessorByClass( EventInsertAuditPostProcessor.class ),
                 getProcessorByClass( FilteringOutUndeclaredDataElementsProcessor.class ),
-                getProcessorByClass( EventFileResourcePostProcessor.class ) ) )
-            .put( UPDATE_PRE, newArrayList(
+                getProcessorByClass( EventFileResourcePostProcessor.class ) ),
+            UPDATE_PRE, newArrayList(
                 getProcessorByClass( ImportOptionsPreProcessor.class ),
                 getProcessorByClass( EventStoredByPreProcessor.class ),
                 getProcessorByClass( SharedEventStatusPreProcessor.class ),
                 getProcessorByClass( ProgramStageInstanceUpdatePreProcessor.class ),
                 getProcessorByClass( ProgramInstanceGeometryPreProcessor.class ),
-                getProcessorByClass( UserInfoUpdatePreProcessor.class ) ) )
-            .put( UPDATE_POST, newArrayList(
+                getProcessorByClass( UserInfoUpdatePreProcessor.class ) ),
+            UPDATE_POST, newArrayList(
                 getProcessorByClass( PublishEventPostProcessor.class ),
                 getProcessorByClass( ProgramNotificationPostProcessor.class ),
                 getProcessorByClass( EventUpdateAuditPostProcessor.class ),
-                getProcessorByClass( EventFileResourcePostProcessor.class ) ) )
-            .put( DELETE_PRE, Collections.emptyList() )
-            .put( DELETE_POST, newArrayList(
-                getProcessorByClass( EventDeleteAuditPostProcessor.class ) ) )
-            .build();
+                getProcessorByClass( EventFileResourcePostProcessor.class ) ),
+            DELETE_PRE, List.of(),
+            DELETE_POST, newArrayList(
+                getProcessorByClass( EventDeleteAuditPostProcessor.class ) ) );
     }
 
     @Bean
